tests/errors/lex_char1.java
public class lex_char1 {
public static	char a ='asdasdsa';
}
